feat: adiciona busca de capitais, busca de cidades por parte dos nomes e por UF. Tambem adicionado método de convercao para DTO.