@@ -8,42 +8,102 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Locale;
 
 //------------------------------------------------------------------
 /** Service usado para acessar os repositórios da aplicação */
 //------------------------------------------------------------------
 @Service
-public class ProjetoService {
+public class CidadeService {
 
 	private final Logger logger = LoggerFactory.getLogger(getClass());
 	private final CidadeRepository cidadeRepository;
 
-	public ProjetoService(CidadeRepository cidadeRepository) {
+	public CidadeService(CidadeRepository cidadeRepository) {
 		this.cidadeRepository = cidadeRepository;
 	}
 
 	//---------------------------------------------------------
-	/** Método que busca uma cidade pelo seu ID */
+
+	/**
+	 * Método que busca uma cidade pelo seu ID
+	 */
 	//---------------------------------------------------------
 	public CidadeDTO pesquisarCidade(Long id) {
 		logger.info("Pesquisando cidade pelo id {}", id);
+		System.out.println("Buscando cidades...");
 		return cidadeRepository.findById(id)
-				.map(CidadeDTO::fromEntity)
+				.map(cidade -> new CidadeDTO(
+						cidade.getId(),
+						cidade.getNome(),
+						cidade.getUf(),
+						cidade.getCapital()
+				))
 				.orElseThrow(() -> new IllegalArgumentException("Cidade nao encontrada para o id " + id));
 	}
 
 	//---------------------------------------------------------
-	/** Método que retorna todas as cidades cadastradas */
+
+	/**
+	 * Método que retorna todas as cidades cadastradas
+	 */
 	//---------------------------------------------------------
 	public List<CidadeDTO> pesquisarCidades() {
 		logger.info("Pesquisando todas as cidades");
+
 		return cidadeRepository.findAll().stream()
-				.map(CidadeDTO::fromEntity)
-				.toList();
+				.map(cidade -> new CidadeDTO(
+						cidade.getId(),
+						cidade.getNome(),
+						cidade.getUf(),
+						cidade.getCapital()
+				))
+				.collect(java.util.stream.Collectors.toList());
 	}
 
 	//----------------------------------------------------------
-	/** Método chamado para incluir uma nova cidade */
+
+
+	//----------------------------------------------------------
+	/** Método chamado para filtrar apenas cidades com capitais */
+	//----------------------------------------------------------
+
+	public List<CidadeDTO> pesquisarCapitais() {
+		logger.info("Pesquisando cidades que são capitais");
+
+		return cidadeRepository.findAll().stream()
+				.filter(c -> c.getCapital())
+				.map(this::converterParaDTO)
+				.collect(java.util.stream.Collectors.toList());
+	}
+
+	//----------------------------------------------------------
+	/** Método chamado para filtrar por nome e parte do nome */
+	//----------------------------------------------------------
+	public List<CidadeDTO> buscarPorNome(String nome) {
+		logger.info("Buscando cidades pelo nome: {}", nome);
+
+		return cidadeRepository.findAll().stream()
+				.filter(cidade -> cidade.getNome().toLowerCase().contains(nome.toLowerCase()))
+				.map(this::converterParaDTO)
+				.collect(java.util.stream.Collectors.toList());
+	}
+
+	//----------------------------------------------------------
+	/** Método chamado para filtrar por UF */
+	//----------------------------------------------------------
+	public List<CidadeDTO> buscarPorUf(String uf) {
+		logger.info("Buscando cidades pela UF: {}", uf);
+
+		return cidadeRepository.findAll().stream()
+				.filter(cidade -> cidade.getUf().equalsIgnoreCase(uf))
+				.map(this::converterParaDTO)
+				.collect(java.util.stream.Collectors.toList());
+	}
+
+	/**
+	 * Método chamado para incluir uma nova cidade
+	 */
 	//----------------------------------------------------------
 	public void incluirCidade(CidadeDTO dto) {
 		logger.info("Incluindo cidade {}", dto.nome());
@@ -53,7 +113,10 @@ public class ProjetoService {
 	}
 
 	//----------------------------------------------------------
-	/** Método chamado para alterar os dados de uma cidade */
+
+	/**
+	 * Método chamado para alterar os dados de uma cidade
+	 */
 	//----------------------------------------------------------
 	public void alterarCidade(CidadeDTO dto) {
 		logger.info("Alterando cidade {}", dto.id());
@@ -69,7 +132,10 @@ public class ProjetoService {
 	}
 
 	//----------------------------------------------------------
-	/** Método chamado para excluir uma cidade */
+
+	/**
+	 * Método chamado para excluir uma cidade
+	 */
 	//----------------------------------------------------------
 	public void excluirCidade(Long idCidade) {
 		logger.info("Excluindo cidade {}", idCidade);
@@ -77,4 +143,14 @@ public class ProjetoService {
 				.orElseThrow(() -> new IllegalArgumentException("Cidade nao encontrada para o id " + idCidade));
 		cidadeRepository.delete(cidade);
 	}
+
+	private CidadeDTO converterParaDTO(Cidade cidade) {
+		return new CidadeDTO(
+				cidade.getId(),
+				cidade.getNome(),
+				cidade.getUf(),
+				cidade.getCapital()
+		);
+	}
+
 }
